@@ -17,7 +17,6 @@ irc            = irc://irc.perl.org/#native
 workflow = linux
 workflow = macos
 workflow = windows
-workflow = msys2-mingw
 
 [Author::Plicease::Core]
 
